# Family-Tree

./: .gitignore  CMakeLists.txt  family_tree  run.sh
include/: Adjust_Ids.hpp  Date.hpp  Family_Tree_Controller.hpp  File_Handler.hpp  Immediate_Family.hpp  Person.hpp  Typedefs.hpp  Widget_Sizes.hpp
src/: Adjust_Ids.cpp  Date.cpp  Family_Tree_Controller.cpp  File_Handler.cpp  GUI.cpp  Immediate_Family.cpp  Person.cpp  main.cpp  main.cpp.ignore  schema.json  test.famalamb.json  testing_input.txt
